# SoapyVfzfpga

./: .gitignore  README.md
SoapyVfzfpga/: SoapyVfzfgpa.cpp  SoapyVfzfpga.cpp  SoapyVfzfpga.hpp  alsa.c  main.cpp  meson.build
SoapyVfzfpga.xcodeproj/: project.pbxproj
SoapyVfzfpga.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
SoapyVfzfpga.xcodeproj/project.xcworkspace/xcuserdata/albin.xcuserdatad/: UserInterfaceState.xcuserstate
SoapyVfzfpga.xcodeproj/xcuserdata/albin.xcuserdatad/xcschemes/: xcschememanagement.plist
SoapyVfzfpga/buld/meson-logs/: meson-log.txt
